# healthcare-memory-assistant

./: .env.example  .gitignore  Dental Clinic Landing Page Template ｜ Aura (1_17_2026 7：16：07 PM).html  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
app/api/middleware/: __init__.py  auth.py  logging.py
app/api/v1/: deps.py  router.py  schemas.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: __init__.py  collections.py  image_operations.py  operations.py  qdrant_client.py
app/embedding/: __init__.py  chunker.py  embedder.py  preprocessor.py
app/memory/: __init__.py  manager.py  models.py  types.py
app/multimodal/: __init__.py  audio.py  document.py  image.py
app/reasoning/: __init__.py  chains.py  llm.py  prompts.py
app/retrieval/: __init__.py  engine.py  filters.py  ranking.py
app/schemas/: __init__.py  memory.py  patient.py  search.py
app/utils/: __init__.py  helpers.py  logging.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: DEMO_FLOW.md  DEMO_VIDEO_SCRIPT.md  ETHICS_AND_SAFETY.md  HACKATHON_SUBMISSION.md  MULTIMODAL_DEMO.md  api.md  architecture.md  deployment.md
frontend/: dashboard.html  index.html  landing.html
scripts/: init_collections.py  load_demo_data.py  load_multimodal_demo.py  migrate.py  reset_db.py  seed_data.py  test_api.py  test_multimodal.py  test_search.py
tests/: conftest.py
tests/integration/: test_api.py  test_qdrant.py
tests/unit/: test_embedding.py  test_memory.py  test_retrieval.py
(+8 files in other folders)
